Build with Java 8